--- a/act47/css/style.css
+++ b/act47/css/style.css
@@ -22,13 +22,18 @@ h1 {
 
 #mdisc {
     text-align: center;
-    margin: 20px 90px;
+    margin: auto;
+    margin-top: 20px;
+    width: 500px;
     padding: 10px;
 }
 
 #list {
     text-align: center;
     list-style-position: inside;
+    width: 500px;
+    margin:auto;
+    padding: 20px;
 }
 
 mark {
@@ -46,4 +51,5 @@ mark2 {
 #ytvideo {
     margin: 20px 20px;
     padding-bottom: 20px;
+    text-align: center;
 }
