--- a/exam/part2b/css/style.css
+++ b/exam/part2b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/part2b/images/office.jpg);
+    background-image: url(part2b/images/office.jpg);
 }
 
 .container {
